[tool.poetry]
name = "sumarizacao_texto"
version = "0.1.0"
description = ""
authors = ["mielesantos <mielesnts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.6.5"
goose3 = "^3.1.10"

[tool.poetry.dev-dependencies]
ipykernel = "^6.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
